
set(EXAMPLE_NAME RayTracer)

file(GLOB_RECURSE SRC_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.c??)
file(GLOB_RECURSE HEADER_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.h)
file(GLOB_RECURSE COMPUTE_SHADER_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} res/*.compute)

SETUP_GROUPS("${SRC_FILES}")
SETUP_GROUPS("${HEADER_FILES}")
SETUP_GROUPS("${COMPUTE_SHADER_FILES}")

add_executable(${EXAMPLE_NAME}  ${SRC_FILES} ${HEADER_FILES} ${COMPUTE_SHADER_FILES})

target_include_directories(${EXAMPLE_NAME} PRIVATE src/)

if(MSVC)
	add_definitions(-D_CONSOLE)
	set_property(TARGET ${EXAMPLE_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY  "${CMAKE_SOURCE_DIR}")
endif()

